syntax = "proto3";
package questionprotoG;

option go_package = "pb/gprc/questionPbgrpc";


message QuestionRequest{
    int32 id = 1;
    string question = 2;
    string answer = 3;
    string wrong_answer_1 =4;
    string wrong_answer_2 =5;
    string wrong_answer_3 =6;
    string created_at =7;
    string updated_at =8;
}

message Empty{}

message QuestionResponse{   
    int32 code = 1;
    repeated QuestionRequest data=2;
}

service QuestionGrpc{
    rpc GetQuestions(Empty) returns (QuestionResponse);
}